<resources>
    <string name="app_name">Flink</string>
    <string name="app_version">Alpha Version 1.0</string>

    <!--  配置的日记功能  -->
    <string-array name="note_function">
        <item name="StickyNote">com.example.flink.layout.note.stickynote.StickyNoteLayout</item>
        <item name="TestNote1">com.example.flink.layout.TestNoteLayout1</item>
        <item name="TestNote2">com.example.flink.layout.TestNoteLayout2</item>
    </string-array>

    <!--  这里面写需要反射的类名  -->
    <string name="ClockView">com.example.flink.view.ClockView</string>
    <string name="CalendarView">com.example.flink.view.CalendarView</string>
    <string name="CalendarSelectLayout">com.example.flink.layout.CalendarSelectLayout</string>

    <!--  字符串映射  -->
    <string name="button_setting">设置按钮</string>
    <string name="buton_function">功能按钮</string>
    <string name="pleast_input_sticky_note">请输入笔记内容</string>
    <string name="add_sticky_note">新增笔记</string>
    <string name="edit_sticky_note">编辑笔记</string>
    <string name="confirm">确认</string>
    <string name="welcome_content">每一天都是新的一天</string>
    <string name="app_state">beta</string>
    <string name="selected">已选中</string>

    <string name="settings">设置</string>
    <string name="note_icon_introduction">笔记图标含义介绍</string>
    <string name="enable_24hours_format">启用24小时时间格式</string>
    <string name="tactile_feedback">触觉反馈</string>
    <string name="about_flink">关于子弹笔记</string>

    <string name="dialog_ok">确定</string>
    <string name="dialog_cancle">取消</string>
    <string name="ask_for_create_note">暂无笔记，是否新建？</string>
    <string name="pm_text">下午</string>
    <string name="am_text">上午</string>
    <string name="today_text">今日</string>

    <dimen name="sticky_note_font_size">18sp</dimen>
</resources>