<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="50dp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:background="@color/silver"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="250dp"
            android:layout_height="2dp" />

        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/welcome_content"
            android:textSize="20sp"
            android:textColor="@color/silver"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/ll_icons"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginEnd="5dp"
            android:text="@string/app_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>