<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_marginEnd="20dp"
            android:textSize="@dimen/sticky_note_font_size"
            android:text="@string/add_sticky_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/iv_expand"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_plus_circle_gray"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/tv_date"
            tools:text="2020-02-02"
            android:textSize="@dimen/sticky_note_font_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/sticky_note_font_size"
            tools:text="18/20" />
    </LinearLayout>

    <com.example.flink.layout.ExpandableLayout
        android:id="@+id/el"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </com.example.flink.layout.ExpandableLayout>

    <com.example.flink.view.FilterEditTextView
        android:padding="7dp"
        android:id="@+id/fet_note_content"
        android:background="@drawable/editor_selector"
        android:inputType="text"
        android:textSize="@dimen/sticky_note_font_size"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pleast_input_sticky_note"
        android:autofillHints="" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_confirm"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:gravity="center_horizontal"
            android:background="@drawable/selector_button_round_bg"
            android:textSize="@dimen/sticky_note_font_size"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>